--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:weightSum="1">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="CALC"/>
-
     <TextView
         android:text="HANBIT WEEKEND"
         android:layout_width="match_parent"
@@ -21,6 +16,18 @@
         android:textSize="30dp"
 
         android:layout_weight="0.34" />
+    <Button
+        android:id="@+id/bt_calc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Calc"
+        />
+    <Button
+        android:id="@+id/bt_contacts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Contacts"
+        />
 
 
 </LinearLayout>
